# ShadowTalk

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  client.cpp  dtls.h  exception.h  format.sh  key.cpp  key.h  message.cpp  message.h  message_piece.cpp  message_piece.h  peer.cpp  peer.h  peer_context.cpp  peer_context.h  rsa.h  server.cpp  sml.cpp  sml.h  udp_server.cpp  udp_server.h
client/: CMakeLists.txt  Client.cpp  Client.hpp  GRPCClient.cpp  GRPCClient.hpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  client.cpp  client.hpp  main.cpp
client/sml/: CMakeLists.txt  address.cpp  address.h  aes_128.cpp  aes_128.h  aes_256.cpp  aes_256.h  byte_string.cpp  byte_string.h  config.h  configuration.cpp  configuration.h  datagram.cpp  datagram.h  dh_key_agreement.cpp  dh_key_agreement.h  encrypt_layer.cpp  encrypt_layer.h  encryptor.cpp  encryptor.h  exception.h  logger.cpp  logger.h  message.cpp  message.h  message_piece.cpp  message_piece.h  peer.cpp  peer.h  ring.cpp  ring.h  service.cpp  service.h  sml.cpp  sml.h  stream.cpp  stream.h  transport_layer.cpp  transport_layer.h  udp_layer.cpp  (+2 more)
common/: CMakeLists.txt  Message.hpp  udp_service.cpp  udp_service.h
grpc-server/: CMakeLists.txt  GRPCServer.cpp  server.cpp
libcry/: CMakeLists.txt  hash.cpp  hash.h  integer.cpp  integer.h  key.cpp  key.h  rsa.cpp  rsa.h
libdtls/: CMakeLists.txt  body.cpp  body.h  byte_string.cpp  byte_string.h  cipher_suite.cpp  cipher_suite.h  ciphertext.cpp  ciphertext.h  client_hello.cpp  client_hello.h  client_key_exchange.cpp  client_key_exchange.h  compare.h  compressed.cpp  compressed.h  compression_method.cpp  compression_method.h  connection_state.cpp  connection_state.h  dtls.h  dtls_state_machine.cpp  dtls_state_machine.h  exchange_keys.cpp  exchange_keys.h  finished.cpp  finished.h  handshake.cpp  handshake.h  handshake_protocol.cpp  handshake_protocol.h  hello_request.cpp  hello_request.h  hello_verify_request.cpp  hello_verify_request.h  message_piece.cpp  message_piece.h  opaque.cpp  opaque.h  peer_context.cpp  (+28 more)
proto/: registry.proto
server/: CMakeLists.txt  message.cpp  message.h  peer.cpp  peer.h  server.cpp  sml.cpp  sml.h  udp_service.cpp  udp_service.h
ws/: CMakeLists.txt  WebSocket.cpp
